--- a/index_1.html
+++ b/index_1.html
@@ -12,7 +12,8 @@
   <input type="hidden" name="cmd" value="_s-xclick" />
   <input type="hidden" name="hosted_button_id" value="68WX8QZL9RK7L" />
   <input type="hidden" name="currency_code" value="USD" />
+  <input type="hidden" name="return" value="https://TVIY-SAIT.com/thankyou.html">
   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Buy Now" />
-</form>
+ </form>
 </body>
 </html>
